# site-for-finding-a-neighbor

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  Makefile  info.txt  nginx_config.conf  pyproject.toml
backend/app/: .env.example  config.py  main.py  settings.py  test_q.py  test_ssl.py
backend/app/api/v1/: __init__.py  auth.py  create_profile.py  login_logout.py  profile.py  qqq.py  user.py
backend/app/database/: models.py  repository.py  requests.py
backend/app/database/repositories/: profile.py  tgaouh.py  user.py
backend/app/pages/: home_page.py
backend/app/schemas/: profile.py  user.py
backend/app/services/: profile.py  user.py
backend/app/static/css/: home_page.css  qqq.css
backend/app/static/js/: create_profile.js  qqq.js  status.js
backend/app/templates/: create_profile.html  home_page.html  me.html  qqq.html  status.html
backend/app/tests/: q.py  test_api.py  test_profile.py  test_q.py  test_user.py
backend/app/utils/: access_token.py  custom_logger.py  get_user.py  jwt_manager.py
backend/tests/: test_profile.py  test_user.py
bot/: .gitignore
bot/keyboards/: user_keyboards.py
bot/utils/: access_token.py  custom_logger.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/css/: account.css
frontend/html/: account.html
frontend/public/: index.html
frontend/src/: App.tsx
frontend_v2_test/: package-lock.json  package.json
tg_bot/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
tg_bot/app/: bot.py  bot_commands.py  bot_start_stop.py  main.py
tg_bot/app/handlers/: user_handlers.py
tg_bot/app/keyboards/: user_keyboards.py
tg_bot/app/utils/: jwt_manager.py
(+38 files in other folders)
