[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Vladimir Mashyanov <vova.mashyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
python-jose = "^3.3.0"
bcrypt = "^4.2.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
